Changes in version 1.3.1 beta (2007-09-10):
--------------------------------------------
- Fixed wxSFShapeBase::GetCompleteBoundingBox() function to respect non-zero horizontal
  and verical shape borders.
- Fixed drawing of multiline text shapes during scaling of the whole shape canvas.

Changes in version 1.3.0 beta (2007-09-07):
--------------------------------------------
- wxSF ported to use wxXmlSerialization (new mini-library suitable for automated serialization/
  deserialization of class objects (arranged into a list or a tree) and their properties 
  (attributes) to/from XML files). The wxXmlSerialization library is shipped together with the wxSF 
  and can be used free and separately in other projects.
- Implemented a container for user-defined data (objects derived from xsSerializable class) which can be
  assigned to the shape and serialized with it (wxSFShapeBase::SetUserData(), wxSFShapeBase::
  GetUserData(), wxSFShapeBase::DeleteUserDataOnDestroy()).
- Implemented wxEVT_SF_LINE_DONE event (macro EVT_SF_LINE_DONE) and related event class 
wxSFShapeEvent.
- Applied compiler symbol WXMAKINGDLL_SF which allows compile the dynamic library with defined 
  WXDLLEXPORT flags.
- Added support for so called 'composed shapes' (for more details see wxSFSample3).
- Added three new sample projects to the library sources distribution.
- Improved C::B and MS Visual Studio project and solution files on Windows.
- Added C::B project files for Linux.
- Fixed shape handles' drawing on Linux.
- Fixed wxSFShapeCanvas::Paste() on Linux.
- Unified look&feel on both Windows and Linux target platforms.
- Succesfully tested with wxWidgets 2.8.4 on Windows XP SP2 (both 32- 
and 64-bit versions), Windows Vista and Linux (Ubuntu 7.04).
- Changed the development status from 'aplha' to 'beta'.
- Several minor bug fixes.

  NOTE: wxSF project file format is not comapatible with previous versions.

Changes in version 1.2.4 alpha (2007-08-10):